# hcd-janusgraph

./: .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .markdown-link-check.json  .markdownlint.json  .mutmut_config  .naming-rules.json  .pre-commit-config.yaml  .secrets.baseline  .secrets.baseline.new  =2.2.0  AGENTS.md  CHANGELOG.md  CHECKPOINT_20260326.md  CHECKPOINT_20260328.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_QUALITY_BEST_PRACTICES_REVIEW_2026-02-11.md  COMMIT_NEW_FEATURES.md  EXCELLENCE_AUDIT_UPDATED_2026-04-09.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_UPDATE_2026-04-08.md  JANUSGRAPH_OPENSEARCH_DESIGN_CRITICAL_ANALYSIS.md  JANUSGRAPH_OPENSEARCH_IMPLEMENTATION_PLAN.md  JANUSGRAPH_OPENSEARCH_INTEGRATION_AUDIT.md  JANUSGRAPH_OPENSEARCH_OPTIMAL_INTEGRATION_DESIGN.md  Makefile  NOTEBOOK_VALIDATION_REPORT.md  PHASE_2_COVERAGE_PROGRESS.md  PHASE_2_STREAMING_IMPLEMENTATION_PLAN.md  PHASE_3_AML_SEMANTIC_PATTERNS_SUMMARY.md  PHASE_4_FRAUD_DETECTION_SUMMARY.md  PHASE_5_PATTERNS_SUMMARY.md  PHASE_5_PATTERN_GENERATORS_PLAN.md  PHASE_6_ANALYTICS_SUMMARY.md  PHASE_7_CHECKPOINT_WEEK_2_COMPLETE.md  PHASE_7_CHECKPOINT_WEEK_3_COMPLETE.md  PHASE_7_NEW_USE_CASES_PLAN.md  (+71 more)
.bob/rules-advance/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-code/: AGENTS.md  TOOLING_STANDARDS.md
.bob/rules-plan/: AGENTS.md  PODMAN_ISOLATION.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  mlc_config.json  pull-request-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature-request.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  container-scan.yml  dependency-guard.yml  deploy-dev.yml  deploy-prod.yml  determinism-guard.yml  deterministic-proof.yml  docs-lint.yml  docs.yml  naming-convention-linter.yml  quality-gates.yml  security-scan.yml  security.yml  update-deterministic-baseline.yml  validate-doc-naming.yml  verify-baseline-update.yml
.hypothesis/constants/: 00d36a66cd740532  012b4ed3fd0e3c8c  04efb42d67ec9381  0a8d7f85adafb488  0cf6a3ff4c267476  0e04c56a75715fc0  17707a1d17b82d81  1e376a3adfe5c602  210640de6ceeceda  21352e6e29febfe0  233739286cc243ab  2b79a548f95aee53  2dbaffaf63252e3a  2eeea722c8318a4d  33c735af5e2f8872  383b788fd7b9f568  3be1e24915dfb3ca  3c2ba61ffb60102a  478e82d7debfa560  49e23c1e415e11ae  4ef3f7ff2188a377  5973d982a7a38561  5caf2776caaba36c  5e90c9314dcfb88a  5f081da90acbacc6  5fdd9ba325ecaaae  65152f6bf0e9a3fa  68b6d0a0ef67e5a3  6a63d108c9e80518  6d985a2a66821136  6e7af86061acd12a  6f93bafbde928a94  732f02593dd733e7  757323f43ed0af1c  79f54897f84d1ddc  930fbfaf6836b0f7  9536712c557759d9  95f14d0bcf4a2243  9d322a3ca42dd841  a198964c1cdbdc22  (+27 more)
archive/: README.md
archive/checkpoints/: CHECKPOINT_20260312.md
archive/kustomize-deprecated-2026-02-19/: DEPRECATION_NOTICE.md
archive/obsolete/: CORRECTION_ACTION_PLAN.md  improvement_plan.md
archive/phases/: PHASE_2_AML_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_CORRECTIONS_SUMMARY.md  PHASE_2_FINAL_SUMMARY.md  PHASE_2_PROGRESS_SUMMARY.md  PHASE_3_COMPLIANCE_SUMMARY.md  PHASE_4_FRAUD_SUMMARY.md  PHASE_5A_OWNERSHIP_CHAIN_SUMMARY.md  PHASE_5B_CATO_PATTERN_SUMMARY.md  PHASE_5_PATTERN_GENERATORS_COMPLETE_SUMMARY.md
archive/releases/: RELEASE_NOTE_20260402.md
archive/summaries/: CONVERSATION_SUMMARY_2026-04-07.md  FINAL_PROJECT_SUMMARY_2026-04-07.md  GRAPH_DENSITY_SUMMARY_20260326.md
argocd/: README.md  application-prod.yaml  application-staging.yaml  application.yaml  applicationset.yaml
banking/: README.md  __init__.py  exceptions.py  requirements.txt  test_structuring.sh
checkpoints/: podman-wxd-checkpoint-2026-02-17t123706-485-codex.md
code_examples/: consumer.py  gremlin_batch.py  producer.py
docker/: .dockerignore  Dockerfile.exporter  requirements-exporter.txt
docs/: ARCHITECTURE.md  BACKUP.md  BANKING_USE_CASES_TECHNICAL_SPEC.md  CHANGELOG.md  CODEBASE_REVIEW_COMPLETE_2026-02-19.md  COMPREHENSIVE_AUDIT_SUMMARY_2026-04-08.md  CONTRIBUTING.md  DEMO_CONFIGURATION.md  DEPLOYMENT.md  DOCS_OPTIMIZATION_PLAN.md  FAQ.md  IMPLEMENTATION_PLAN_2026-04-08.md  IMPLEMENTATION_STATUS_2026-04-08.md  INDEX.md  MONITORING.md  SETUP.md  TECHNICAL_SPECIFICATIONS.md  TESTING.md  TROUBLESHOOTING.md  codes_mcp_fraud_pilot_plan_1771491238767.md  codex-audit-report-2026-02-18.md  codex-execution-task-board.md  codex-github-issues-drafts-2026-02-18.md  codex-implementation-plan-p0-p2.md  codex-p2-closeout-rollback-forward-2026-02-20.md  codex-program-tracker.md  demo-setup-guide.md  document-catalog.md  documentation-standards.md  evidence-2026-02-18-deterministic-mcp-dependabot.md  index.md  prod-secure-overrides.md  project-status.md  technical-specifications.md  terraform-phase5-baremetal-complete-2026-02-19.md
examples/: bust_out_detector_example.py  community_detector_example.py  crypto_business_reports_example.py  crypto_risk_dashboard_example.py  crypto_streaming_example.py  crypto_visualization_example.py  graph_visualizer_example.py  identity_validator_example.py  network_analyzer_enhanced_example.py  network_analyzer_example.py  pattern_analyzer_example.py  query_router_example.py  synthetic_identity_example.py  synthetic_identity_pattern_example.py
hcd-1.2.3/: LICENSE.txt  README.txt  ds_branch.txt  ds_timestamp.txt  ds_version.txt
notebooks/: 01_quickstart.ipynb  02_janusgraph_complete_guide.ipynb  03_advanced_queries.ipynb  04_AML_Structuring_Analysis.ipynb  README.md  aml_structuring_analysis.py  crypto-aml-detection-demo.ipynb  graph-fraud-detection-demo.ipynb  insider-trading-detection-demo.ipynb  synthetic-identity-fraud-detection-demo.ipynb
notebooks-exploratory/: 01_quickstart.ipynb  02_janusgraph_complete_guide.ipynb  03_advanced_queries.ipynb  04_AML_Structuring_Analysis.ipynb  README.md  aml_structuring_analysis.py  graph_interactive.html
operations/: troubleshooting.md
scripts/: README.md
site/: 404.html  index.html  sitemap.xml
skills/: README.md
terraform/: README.md
tests/: README.md  conftest.py  test-results.md  test_notebooks.py  test_security.py
verification_reports/: coverage_output.txt
(+1753 files in other folders)
