[project]
name = "hcd-janusgraph-banking"
version = "1.2.0"
description = "Production-ready banking analytics platform with HCD and JanusGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gremlinpython==3.8.0",
    "cassandra-driver==3.29.3",
    "pandas==2.0.0",
    "networkx==3.0",
    "matplotlib==3.7.0",
    "pyvis==0.3.2",
    "prometheus-client==0.19.0",
    "sentence-transformers>=2.2.2",
    "nest-asyncio>=1.5.0",
    "opensearch-py>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | notebooks
  | hcd-1.2.3
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov=banking --cov-report=html --cov-report=term"
timeout = 300

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ['notebooks/', 'hcd-1.2.3/']
